[gd_scene load_steps=15 format=3 uid="uid://cb4e4g3lpru2p"]

[ext_resource type="Script" uid="uid://c6qk0b3w0pc0b" path="res://scripts/shop_interface.gd" id="1_rr0xp"]
[ext_resource type="FontFile" uid="uid://wlpg7r5avxq4" path="res://addons/fonts/Perfect DOS VGA 437.ttf" id="2_fsa2h"]
[ext_resource type="StyleBox" uid="uid://biwwll0on0m1s" path="res://UI/PANEL/panel_button.tres" id="3_xfvfl"]
[ext_resource type="StyleBox" uid="uid://brdr86uikixcj" path="res://UI/PANEL/panel_hover.tres" id="4_rg7s4"]
[ext_resource type="PackedScene" uid="uid://d0x34x8ck1luu" path="res://UI/item_shop.tscn" id="6_rg7s4"]
[ext_resource type="Texture2D" uid="uid://bljo033rnnnua" path="res://addons/ui/panel3.png" id="7_76du3"]

[sub_resource type="Animation" id="Animation_r6rmt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:process_mode")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_841qn"]
resource_name = "close"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:process_mode")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_svewm"]
resource_name = "open"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:process_mode")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mas6o"]
_data = {
&"RESET": SubResource("Animation_r6rmt"),
&"close": SubResource("Animation_841qn"),
&"open": SubResource("Animation_svewm")
}

[sub_resource type="LabelSettings" id="LabelSettings_tpqxd"]
font = ExtResource("2_fsa2h")
font_size = 30
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_hq5hq"]
font = ExtResource("2_fsa2h")
font_size = 25
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_rc0hy"]
font = ExtResource("2_fsa2h")
font_size = 20
font_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wfhbt"]
texture = ExtResource("7_76du3")

[node name="ShopInterface" type="Control"]
process_mode = 4
modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rr0xp")

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -8.0
offset_right = 4.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("2_fsa2h")
theme_override_font_sizes/font_size = 100
theme_override_styles/focus = ExtResource("3_xfvfl")
theme_override_styles/disabled_mirrored = ExtResource("3_xfvfl")
theme_override_styles/disabled = ExtResource("3_xfvfl")
theme_override_styles/hover_pressed_mirrored = ExtResource("4_rg7s4")
theme_override_styles/hover_pressed = ExtResource("4_rg7s4")
theme_override_styles/hover_mirrored = ExtResource("4_rg7s4")
theme_override_styles/hover = ExtResource("4_rg7s4")
theme_override_styles/pressed_mirrored = ExtResource("3_xfvfl")
theme_override_styles/pressed = ExtResource("3_xfvfl")
theme_override_styles/normal_mirrored = ExtResource("3_xfvfl")
theme_override_styles/normal = ExtResource("3_xfvfl")
text = "BACK"

[node name="BuyButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 315.5
offset_top = -150.0
offset_right = 534.5
grow_vertical = 0
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("2_fsa2h")
theme_override_font_sizes/font_size = 100
theme_override_styles/focus = ExtResource("3_xfvfl")
theme_override_styles/disabled_mirrored = ExtResource("3_xfvfl")
theme_override_styles/disabled = ExtResource("3_xfvfl")
theme_override_styles/hover_pressed_mirrored = ExtResource("4_rg7s4")
theme_override_styles/hover_pressed = ExtResource("4_rg7s4")
theme_override_styles/hover_mirrored = ExtResource("4_rg7s4")
theme_override_styles/hover = ExtResource("4_rg7s4")
theme_override_styles/pressed_mirrored = ExtResource("3_xfvfl")
theme_override_styles/pressed = ExtResource("3_xfvfl")
theme_override_styles/normal_mirrored = ExtResource("3_xfvfl")
theme_override_styles/normal = ExtResource("3_xfvfl")
text = "BUY"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
process_mode = 3
libraries = {
&"": SubResource("AnimationLibrary_mas6o")
}
autoplay = "open"

[node name="Panel2" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 128.0
offset_top = 148.0
offset_right = 722.0
offset_bottom = 366.0
grow_vertical = 2
theme_override_styles/panel = ExtResource("3_xfvfl")

[node name="NameShowLabel" type="Label" parent="Panel2"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 594.0
offset_bottom = 218.0
text = "Lorem ipsum dolor sit amet."
label_settings = SubResource("LabelSettings_tpqxd")
horizontal_alignment = 1
uppercase = true

[node name="Label" type="Label" parent="Panel2"]
layout_mode = 0
offset_left = 17.0
offset_top = 32.0
offset_right = 577.0
offset_bottom = 218.0
text = "description:"
label_settings = SubResource("LabelSettings_hq5hq")
uppercase = true

[node name="DescriptionShowLabel" type="Label" parent="Panel2"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 17.0
offset_top = 52.0
offset_right = 577.0
offset_bottom = 218.0
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur turpis diam, lacinia at lacus in, scelerisque facilisis nibh. Cras sit amet elementum erat. In in ex non tortor fermentum rhoncus sit amet non nisi. Nam at metus quis leo viverra vulputate quis sit amet nibh. Aliquam sed lacus nisl. Duis sed gravida leo. Etiam ac tristique sapien. Donec tempor, est vel congue ultrices, turpis metus rutrum elit, et faucibus risus dolor aliquam mauris. Nam nec luctus ligula, id ornare nibh. Cras interdum odio enim, eget consequat sapien pellentesque pellentesque."
label_settings = SubResource("LabelSettings_rc0hy")
autowrap_mode = 2
clip_text = true
uppercase = true

[node name="ShopContainer" type="ScrollContainer" parent="."]
layout_direction = 1
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -982.0
offset_top = -458.0
offset_right = -64.0
offset_bottom = 352.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_wfhbt")

[node name="VBoxShopContainer" type="VBoxContainer" parent="ShopContainer"]
layout_mode = 2
theme_override_constants/separation = 300
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="ShopContainer/VBoxShopContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 303
alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="ShopContainer/VBoxShopContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 303
alignment = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="ShopContainer/VBoxShopContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 303
alignment = 1

[node name="HBoxContainer4" type="HBoxContainer" parent="ShopContainer/VBoxShopContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 303
alignment = 1

[node name="HBoxContainer5" type="HBoxContainer" parent="ShopContainer/VBoxShopContainer"]
layout_mode = 2
theme_override_constants/separation = 300

[node name="PlaceHolder" parent="ShopContainer/VBoxShopContainer/HBoxContainer5" instance=ExtResource("6_rg7s4")]
layout_mode = 2

[node name="PlaceHolder2" parent="ShopContainer/VBoxShopContainer/HBoxContainer5" instance=ExtResource("6_rg7s4")]
layout_mode = 2

[node name="PlaceHolder3" parent="ShopContainer/VBoxShopContainer/HBoxContainer5" instance=ExtResource("6_rg7s4")]
layout_mode = 2

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="BuyButton" to="." method="_on_buy_button_pressed"]
